[metadata]
name = openmc
version = attr: openmc.__version__
author = The OpenMC Development Team
author_email = openmc@anl.gov
description = OpenMC Monte Carlo Code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://openmc.org
license = MIT
license_files = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers,
    Intended Audience :: End Users/Desktop,
    Intended Audience :: Science/Research,
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Topic :: Scientific/Engineering
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Source = https://github.com/openmc-dev/openmc
    Tracker = https://github.com/openmc-dev/openmc/issues

[options.entry_points]
console_scripts =
    openmc-ace-to-hdf5 = openmc.scripts.openmc-ace-to-hdf5:main 
    # openmc-make-test-data = openmc.scripts.openmc-make-test-data:main
    # openmc-plot-mesh-tally = scripts.openmc-plot-mesh-tally:main
    # openmc-track-combine = scripts.openmc-track-combine:main
    # openmc-track-to-vtk = scripts.openmc-track-to-vtk:main
    # openmc-update-inputs = scripts.openmc-update-inputs:main
    # openmc-update-mgxs = scripts.openmc-update-mgxs:main
    # openmc-validate-xml = scripts.openmc-validate-xml:main
    # openmc-voxel-to-vtk = scripts.openmc-voxel-to-vtk:main

[options]
packages = find:
package_dir =
    =openmc
python_requires= >=3.6
install_requires= 
    numpy >= 1.9
    h5py
    scipy
    ipython
    matplotlib
    pandas
    lxml
    uncertainties

[options.package_data]
openmc.lib = libopenmc.*
openmc.data =
    mass16.txt
    BREMX.DAT
    half_life.json
    *.h5
openmc.data.effective_dose = *.txt


[options.extras_require]
depletion-mpi =
    mpi4py
docs =
    sphinx
    sphinxcontrib-katex
    sphinx-numfig
    jupyter
    sphinxcontrib-svg2pdfconverter
    sphinx-rtd-theme
        
tests = 
    pytest
    pytest-cov
    colorama
vtk =
    vtk

[options.packages.find]
where = src
exclude = tests*
