[metadata]
name = openmc
version = attr: openmc.__version__
author = The OpenMC Development Team
author_email = openmc@anl.gov
description = OpenMC Monte Carlo Code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://openmc.org
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers,
    Intended Audience :: End Users/Desktop,
    Intended Audience :: Science/Research,
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Topic :: Scientific/Engineering
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Source = https://github.com/openmc-dev/openmc
    Tracker = https://github.com/openmc-dev/openmc/issues

[options.entry_points]
console_scripts =
    openmc_voxel_to_vtk = scripts.openmc_voxel_to_vtk:main
    openmc_ace_to_hdf5 = scripts.openmc_ace_to_hdf5:main 
    openmc_make_test_data = scripts.openmc_make_test_data:main
    openmc_plot_mesh_tally = scripts.openmc_plot_mesh_tally:main
    openmc_track_combine = scripts.openmc_track_combine:main
    openmc_track_to_vtk = scripts.openmc_track_to_vtk:main
    openmc_update_inputs = scripts.openmc_update_inputs:main
    openmc_update_mgxs = scripts.openmc_update_mgxs:main
    openmc_validate_xml = scripts.openmc_validate_xml:main

[options]
packages = find:
package_dir =
    =openmc
python_requires= >=3.6
install_requires= 
    numpy >= 1.9
    h5py
    scipy
    ipython
    matplotlib
    pandas
    lxml
    uncertainties

[options.package_data]
openmc.lib = libopenmc.*
openmc.data =
    mass16.txt
    BREMX.DAT
    half_life.json
    *.h5
openmc.data.effective_dose = *.txt


[options.extras_require]
depletion-mpi =
    mpi4py
docs =
    sphinx
    sphinxcontrib-katex
    sphinx-numfig
    jupyter
    sphinxcontrib-svg2pdfconverter
    sphinx-rtd-theme     
test = 
    pytest
    pytest-cov
    colorama
vtk =
    vtk

[options.packages.find]
where = src
exclude = tests*
