[metadata]
author = The OpenMC Development Team
author_email = openmc@anl.gov
description = OpenMC Monte Carlo Code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://openmc.org
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers,
    Intended Audience :: End Users/Desktop,
    Intended Audience :: Science/Research,
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Topic :: Scientific/Engineering
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Source = https://github.com/openmc-dev/openmc
    Tracker = https://github.com/openmc-dev/openmc/issues
    Documentation = https://docs.openmc.org

[options.extras_require]
depletion-mpi =
    mpi4py
docs =
    sphinx
    sphinxcontrib-katex
    sphinx-numfig
    jupyter
    sphinxcontrib-svg2pdfconverter
    sphinx-rtd-theme     
test = 
    pytest
    pytest-cov
    colorama
vtk =
    vtk

[options.packages.find]
where = src
exclude = tests*
